objects/chargebeeapps__CB_Quote__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__CB_Acceptance_Link__c</fullName>
        <label>CB Acceptance Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Quote_Id__c</fullName>
        <label>CB Quote Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Site</label>
        <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
        <relationshipLabel>CB Quotes</relationshipLabel>
        <relationshipName>CB_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Subscription</label>
        <referenceTo>chargebeeapps__CB_Subscription__c</referenceTo>
        <relationshipLabel>CB Quotes</relationshipLabel>
        <relationshipName>CB_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CB Quotes</relationshipLabel>
        <relationshipName>CB_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CustomerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CB Quotes</relationshipLabel>
        <relationshipName>CB_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Due_Amount__c</fullName>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Operation_Type__c</fullName>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREATE_SUBSCRIPTION_FOR_CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>CHANGE_SUBSCRIPTION</fullName>
                </value>
                <value>
                    <fullName>ONETIME_INVOICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CB Quotes</relationshipLabel>
        <relationshipName>CB_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__PONumber__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__PriceType__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAX_EXCLUSIVE</fullName>
                </value>
                <value>
                    <fullName>TAX_INCLUSIVE</fullName>
                </value>
                <value>
                    <fullName>_UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                </value>
                <value>
                    <fullName>INVOICED</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__VATNumber__c</fullName>
        <label>VAT Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__ValidTill__c</fullName>
        <label>Valid Till</label>
        <type>DateTime</type>
    </fields>
    <label>CB Quote</label>
    <nameField>
        <label>CB Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>